--- a/notebooks/dataset_analytics.ipynb
+++ b/notebooks/dataset_analytics.ipynb
@@ -16,18 +16,19 @@
     "import glob\n",
     "import json\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "\n",
     "dataset = pd.read_parquet('../data/raw/lfm_popularity/dataset_20.parquet')\n",
     "dataset_cols = list(filter(lambda x: not x.startswith('highlevel') and not x.startswith('lowlevel') and not x.startswith('rhythm') and not x.startswith('tonal'), list(dataset.columns)))\n",
     "\n",
     "charts = pd.read_csv('/storage/nas3/datasets/music/billboard/billboard_hot-100_1958-08-11_2019-07-06.csv', header=0, index_col=0)\n",
-    "visited = pd.read_csv('../data/interim/lfm_popularity/mp3s/visited.csv', header=0, index_col=0)\n",
+    "yt = pd.read_pickle('../data/interim/lfm_popularity/mp3s/yt_info.pickle')\n",
     "\n",
-    "charts_dataset = dataset.merge(charts, left_on=['artist_name', 'recording_name'], right_on=['artist', 'title'])\n",
-    "visited_dataset = dataset.merge(visited, left_on=['recording_mbid'], right_on=['track_id'])\n",
-    "\n",
-    "visited_charts_dataset = visited_dataset.merge(charts_dataset, on=['recording_mbid'])"
+    "dataset_charts = dataset.merge(charts, left_on=['artist_name', 'recording_name'], right_on=['artist', 'title'])\n",
+    "dataset_yt = dataset.merge(yt, left_on=['recording_mbid'], right_on=['mbid'])\n",
+    "dataset_all = dataset_charts.merge(yt, left_on=['recording_mbid'], right_on=['mbid'])"
    ]
   },
   {
@@ -50,10 +51,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Charts"
    ]
@@ -64,31 +63,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "charts_dataset_cols = dataset_cols + ['lastPos', 'peakPos', 'rank', 'weeks', 'latest-date']\n",
-    "\n",
-    "display(charts_dataset[charts_dataset_cols])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visited_charts_dataset = visited_charts_dataset.merge(dataset, on=['recording_mbid'])\n",
-    "visited_charts_dataset = visited_charts_dataset.merge(yt_info, on=['recording_mbid'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import seaborn as sns\n",
     "\n",
-    "corr = charts_dataset[['listener_count','play_count','peakPos', 'rank', 'weeks']].corr()\n",
-    "sns.heatmap(corr, annot=True).set_title('Pearson')"
+    "corr = dataset_charts[['listener_count','play_count','peakPos', 'rank', 'weeks']].corr()\n",
+    "sns.heatmap(corr, annot=True, cmap='coolwarm', vmin=0., vmax=1.).set_title('Pearson')"
    ]
   },
   {
@@ -97,8 +75,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kendal_corr = charts_dataset[['listener_count','play_count','peakPos', 'rank', 'weeks']].corr(method='kendall')\n",
-    "sns.heatmap(kendal_corr, annot=True).set_title('kendall')"
+    "kendall_corr = dataset_charts[['listener_count','play_count','peakPos', 'rank', 'weeks']].corr(method='kendall')\n",
+    "sns.heatmap(kendall_corr, annot=True, cmap='coolwarm', vmin=0., vmax=1.).set_title('kendall')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Target Values"
    ]
   },
   {
@@ -107,27 +92,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visited_yt_info = []\n",
-    "# files = glob.glob('../data/interim/lfm_popularity/mp3s/*.info.json')\n",
-    "# display(len(files))\n",
-    "# count = 0\n",
-    "# for _, row in visited_dataset.iterrows():\n",
-    "#     file = list(filter(lambda f: row['track_id'] in f, files))\n",
-    "#     try:\n",
-    "#         with open(file[0]) as json_file:\n",
-    "#             info = json.load(json_file)\n",
-    "#             info['recording_mbid'] = row['track_id']\n",
-    "#             visited_yt_info.append(info)\n",
-    "#     except:\n",
-    "#         continue\n",
-    "        \n",
-    "#     count += 1\n",
-    "    \n",
-    "#     if count > 100:\n",
-    "#         break\n",
+    "targets = ['play_count', 'listener_count', 'yt_view_count', 'yt_like_count', 'yt_dislike_count', 'log_pc', 'log_lc', 'log_yt_vc', 'lfm_hit_score', 'log_lfm_hit_score']\n",
     "\n",
-    "# yt_info = pd.DataFrame(visited_yt_info)    \n",
-    "# display(yt_info)"
+    "dataset_yt = dataset_yt[dataset_yt['listener_count'] > 0]\n",
+    "dataset_yt = dataset_yt[dataset_yt['play_count'] > 0]\n",
+    "dataset_yt.drop_duplicates(['artist_name', 'recording_name'], inplace=True)\n",
+    "\n",
+    "dataset_yt['log_pc'] = np.log(dataset_yt['play_count'])\n",
+    "dataset_yt['log_lc'] = np.log(dataset_yt['listener_count'])\n",
+    "\n",
+    "dataset_yt['log_yt_vc'] = np.log(dataset_yt['yt_view_count'])\n",
+    "\n",
+    "dataset_yt['lfm_hit_score'] = dataset_yt['log_pc'] * dataset_yt['log_lc']\n",
+    "dataset_yt['log_lfm_hit_score'] = np.log(dataset_yt['lfm_hit_score'])\n",
+    "\n",
+    "corr = dataset_yt[targets].corr()\n",
+    "sns.heatmap(corr, annot=True, cmap='coolwarm', vmin=0., vmax=1.).set_title('Pearson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kendall_corr = dataset_yt[targets].corr(method='kendall')\n",
+    "sns.heatmap(kendall_corr, annot=True, cmap='coolwarm', vmin=0., vmax=1.).set_title('kendall')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_dataset = dataset_yt[~dataset_yt['yt_release_date'].isna()]\n",
+    "\n",
+    "kendall_corr = reduced_dataset[targets].corr(method='kendall')\n",
+    "sns.heatmap(kendall_corr, annot=True, cmap='coolwarm', vmin=0., vmax=1.).set_title('kendall')\n",
+    "display(len(dataset_yt), len(reduced_dataset))\n",
+    "\n",
+    "display(reduced_dataset[targets].head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_columns = ['log_pc', 'log_lc', 'log_yt_vc', 'lfm_hit_score', 'log_lfm_hit_score']\n",
+    "\n",
+    "plot_data = dataset_yt.sort_values(by=['log_yt_vc']).reset_index()\n",
+    "\n",
+    "display(plot_data[['artist_name', 'recording_name'] + plot_columns].tail(10))\n",
+    "\n",
+    "plot_data[plot_columns].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = ['play_count', 'listener_count', 'peakPos', 'rank', 'weeks', 'log_pc', 'log_lc', 'lfm_hit_score', 'log_lfm_hit_score']\n",
+    "\n",
+    "dataset_charts = dataset_charts[dataset_charts['listener_count'] > 0]\n",
+    "dataset_charts = dataset_charts[dataset_charts['play_count'] > 0]\n",
+    "\n",
+    "dataset_charts['log_pc'] = np.log(dataset_charts['play_count'])\n",
+    "dataset_charts['log_lc'] = np.log(dataset_charts['listener_count'])\n",
+    "\n",
+    "dataset_charts['lfm_hit_score'] = dataset_charts['log_pc'] * dataset_charts['log_lc']\n",
+    "dataset_charts['log_lfm_hit_score'] = np.log(dataset_charts['lfm_hit_score'])\n",
+    "\n",
+    "corr = dataset_charts[targets].corr()\n",
+    "sns.heatmap(corr, annot=True, cmap='coolwarm', vmin=0., vmax=1.).set_title('Pearson')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kendall_corr = dataset_charts[targets].corr(method='kendall')\n",
+    "sns.heatmap(kendall_corr, annot=True, cmap='coolwarm', vmin=0., vmax=1.).set_title('kendall')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_columns = ['log_pc', 'log_lc', 'lfm_hit_score', 'log_lfm_hit_score']\n",
+    "\n",
+    "plot_data = dataset_yt[dataset_yt['lfm_hit_score'] > 10].sort_values(by=['lfm_hit_score']).reset_index()\n",
+    "plot_data = plot_data\n",
+    "display(plot_data[['artist_name', 'recording_name'] + plot_columns].tail(10))\n",
+    "\n",
+    "plot_data[plot_columns].plot()"
    ]
   }
  ],
