Add AB feature loader.

--- a/notebooks/dataset_stats.ipynb
+++ b/notebooks/dataset_stats.ipynb
@@ -16,10 +16,19 @@
     "import pandas as pd\n",
     "\n",
     "dataset = pd.read_csv('../data/hit_song_prediction_ismir2020/raw/msd-mbid-2016-01-results-ab.csv', names=['msd_id', 'mbid', 'title', 'artist'])\n",
-    "display(len(dataset.groupby(by=['msd_id'])))\n",
+    "print('Dataset unique MSD-IDs:', dataset['msd_id'].nunique())\n",
     "\n",
-    "matches = pd.read_pickle('../data/hit_song_prediction_ismir2020/processed/msd_bb_matches.pickle')\n",
-    "dataset = dataset.merge(matches, on=['msd_id'])"
+    "matches = pd.read_csv('../data/hit_song_prediction_ismir2019/msd_bb_matches.csv', index_col=0)\n",
+    "print('Matches unique MSD-IDs:', matches['msd_id'].nunique())\n",
+    "\n",
+    "matches_dataset = dataset.merge(matches, on=['msd_id'])\n",
+    "print('Matches dataset unique MSD-IDs:', matches_dataset['msd_id'].nunique(), 'Unique MBIDs:', matches_dataset['mbid'].nunique())\n",
+    "\n",
+    "non_matches = pd.read_csv('../data/hit_song_prediction_ismir2019/msd_bb_non_matches.csv', index_col=0)\n",
+    "print('Non-Matches unique MSD-IDs:', non_matches['msd_id'].nunique(), 'Unique MBIDs:')\n",
+    "\n",
+    "non_matches_dataset = dataset.merge(non_matches, on=['msd_id'])\n",
+    "print('Non-Matches unique MSD-IDs:', non_matches_dataset['msd_id'].nunique(), 'Unique MBIDs:', non_matches_dataset['mbid'].nunique())"
    ]
   },
   {
@@ -28,24 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(matches.shape)\n",
-    "display(dataset.shape, len(dataset.groupby(by=['msd_id'])))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Starting with approx. 5700 hit songs we have found a mbid for approx. 5100. Title and artist do not always match when msd_id does."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.head(10)"
+    "from hit_prediction_code.dataloaders import acousticbrainz\n",
+    "\n",
+    "acousticbrainz.load_ab_features_as_df(list(matches_dataset['mbid'][:10]), 'll', project_home='..')"
    ]
   }
  ],
