--- a/notebooks/dataset_stats.ipynb
+++ b/notebooks/dataset_stats.ipynb
@@ -15,20 +15,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "dataset = pd.read_csv('../data/hit_song_prediction_ismir2020/raw/msd-mbid-2016-01-results-ab.csv', names=['msd_id', 'mbid', 'title', 'artist'])\n",
-    "print('Dataset unique MSD-IDs:', dataset['msd_id'].nunique())\n",
     "\n",
-    "matches = pd.read_csv('../data/hit_song_prediction_ismir2019/msd_bb_matches.csv', index_col=0)\n",
-    "print('Matches unique MSD-IDs:', matches['msd_id'].nunique())\n",
+    "msd_bb_mbid_matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_matches.csv', index_col=0)\n",
+    "print('Matches')\n",
+    "print('unique MSD-IDs:', msd_bb_mbid_matches['msd_id'].nunique(), 'Unique MBIDs:', msd_bb_mbid_matches['mbid'].nunique())\n",
     "\n",
-    "matches_dataset = dataset.merge(matches, on=['msd_id'])\n",
-    "print('Matches dataset unique MSD-IDs:', matches_dataset['msd_id'].nunique(), 'Unique MBIDs:', matches_dataset['mbid'].nunique())\n",
-    "\n",
-    "non_matches = pd.read_csv('../data/hit_song_prediction_ismir2019/msd_bb_non_matches.csv', index_col=0)\n",
-    "print('Non-Matches unique MSD-IDs:', non_matches['msd_id'].nunique(), 'Unique MBIDs:')\n",
-    "\n",
-    "non_matches_dataset = dataset.merge(non_matches, on=['msd_id'])\n",
-    "print('Non-Matches unique MSD-IDs:', non_matches_dataset['msd_id'].nunique(), 'Unique MBIDs:', non_matches_dataset['mbid'].nunique())"
+    "msd_bb_mbid_non_matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches.csv', index_col=0)\n",
+    "print('Non-Matches')\n",
+    "print('unique MSD-IDs:', msd_bb_mbid_non_matches['msd_id'].nunique(), 'Unique MBIDs:', msd_bb_mbid_non_matches['mbid'].nunique())"
    ]
   },
   {
@@ -39,7 +33,7 @@
    "source": [
     "from hit_prediction_code.dataloaders import acousticbrainz\n",
     "\n",
-    "acousticbrainz.load_ab_features_as_df(list(matches_dataset['mbid'][:10]), 'll', project_home='..')"
+    "acousticbrainz.load_ab_features_as_df(list(msd_bb_mbid_matches['mbid'][:5]), 'll', project_home='..')"
    ]
   }
  ],
