--- a/notebooks/msd_bb_mbid_stats.ipynb
+++ b/notebooks/msd_bb_mbid_stats.ipynb
@@ -15,16 +15,40 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "msd_mbid_map = pd.read_csv(\n",
+    "    '../data/hit_song_prediction_ismir2020/raw/msd-mbid-2016-01-results-ab.csv',\n",
+    "    names=['msd_id', 'mbid', 'title', 'artist'],\n",
+    ")\n",
+    "msd_bb_ismir2019 = pd.read_csv('../data/hit_song_prediction_ismir2019/msd_bb_matches.csv', header=0, index_col=0)\n",
+    "msd_bb_ismir2019 = msd_bb_ismir2019.merge(msd_mbid_map, on=['msd_id'])\n",
     "\n",
-    "msd_bb_mbid_matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_matches.csv', index_col=0)\n",
-    "msd_bb_mbid_non_matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches.csv', index_col=0)\n",
+    "msd_bb_exact = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_exact_matches.csv', header=0, index_col=0)\n",
+    "msd_bb_cleaned = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_cleaned_matches.csv', header=0, index_col=0)\n",
+    "\n",
+    "msd_bb_mbid_exact_matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_exact_matches.csv', header=0, index_col=0)\n",
+    "msd_bb_mbid_cleaned_matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches.csv', header=0, index_col=0)\n",
+    "msd_bb_mbid_non_matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches.csv', header=0, index_col=0)\n",
     "\n",
     "counts = pd.DataFrame({\n",
-    "    'matches': {\n",
-    "        'msd_id_count': msd_bb_mbid_matches['msd_id'].nunique(),\n",
-    "        'mbid_count': msd_bb_mbid_matches['mbid'].nunique(),\n",
+    "    'msd_bb_ismir2019': {\n",
+    "        'msd_id_count': msd_bb_ismir2019['msd_id'].nunique(),\n",
+    "        'mbid_count': msd_bb_ismir2019['mbid'].nunique(),\n",
     "    },\n",
-    "    'non_matches': {\n",
+    "    'msd_bb_exact': {\n",
+    "        'msd_id_count': msd_bb_exact['msd_id'].nunique(),  \n",
+    "    },\n",
+    "    'msd_bb_mbid_exact': {\n",
+    "        'msd_id_count': msd_bb_mbid_exact_matches['msd_id'].nunique(),\n",
+    "        'mbid_count': msd_bb_mbid_exact_matches['mbid'].nunique(),\n",
+    "    },\n",
+    "    'msd_bb_cleaned': {\n",
+    "        'msd_id_count': msd_bb_cleaned['msd_id'].nunique(),  \n",
+    "    },\n",
+    "    'msd_bb_mbid_cleaned': {\n",
+    "        'msd_id_count': msd_bb_mbid_cleaned_matches['msd_id'].nunique(),\n",
+    "        'mbid_count': msd_bb_mbid_cleaned_matches['mbid'].nunique(),\n",
+    "    },\n",
+    "    'msd_bb_mbid_non': {\n",
     "        'msd_id_count': msd_bb_mbid_non_matches['msd_id'].nunique(),\n",
     "        'mbid_count': msd_bb_mbid_non_matches['mbid'].nunique(),\n",
     "    },\n",
@@ -40,63 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hit_prediction_code.dataloaders import millionsongdataset\n",
-    "import re\n",
-    "\n",
-    "msd = millionsongdataset.read_msd_unique_tracks('..')\n",
-    "\n",
-    "bb = pd.read_csv('../data/billboard/billboard_hot-100_1958-08-11_2019-07-06.csv', header=0)\n",
-    "\n",
-    "msd['artist_lower'] = msd['artist'].apply(lambda s: re.sub(r'\\s+', ' ', str(s).lower().strip()))\n",
-    "msd['title_lower'] = msd['title'].apply(lambda s: re.sub(r'\\s+', ' ', str(s).lower().strip()))\n",
-    "\n",
-    "bb['artist_lower'] = bb['artist'].apply(lambda s: re.sub(r'\\s+', ' ', str(s).lower().strip()))\n",
-    "bb['title_lower'] = bb['title'].apply(lambda s: re.sub(r'\\s+', ' ', str(s).lower().strip()))\n",
-    "\n",
-    "msd_bb = msd.merge(bb, on=['artist', 'title'])\n",
-    "msd_bb_lower = msd.merge(bb, on=['artist_lower', 'title_lower'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_re = r'[^\\w\\s]'\n",
-    "\n",
-    "msd['artist_clean'] = msd['artist_lower'].apply(lambda s: re.sub(clean_re, '', s))\n",
-    "msd['title_clean'] = msd['title_lower'].apply(lambda s: re.sub(clean_re, '', s))\n",
-    "\n",
-    "bb['artist_clean'] = bb['artist_lower'].apply(lambda s: re.sub(clean_re, '', s))\n",
-    "bb['title_clean'] = bb['title_lower'].apply(lambda s: re.sub(clean_re, '', s))\n",
-    "\n",
-    "msd_bb_clean = msd.merge(bb, on=['artist_clean', 'title_clean'])\n",
-    "\n",
-    "display(len(msd_bb), len(msd_bb_lower), len(msd_bb_clean))\n",
-    "\n",
-    "display(msd_bb_clean[~msd_bb_clean.msd_id.isin(msd_bb_lower['msd_id'])][['artist_x', 'artist_y', 'title_x', 'title_y']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msd_mbid_map = pd.read_csv(\n",
-    "    '../data/hit_song_prediction_ismir2020/raw/msd-mbid-2016-01-results-ab.csv',\n",
-    "    names=['msd_id', 'mbid', 'title', 'artist'],\n",
-    ")\n",
-    "\n",
-    "msd_mbid = pd.read_csv(\n",
-    "    '../data/hit_song_prediction_ismir2019/msd_bb_matches.csv',\n",
-    "    names=['msd_id', 'mbid', 'title', 'artist'],\n",
-    ")\n",
-    "\n",
-    "msd_bb = msd_bb_clean.merge(msd_mbid_map, on=['msd_id'])\n",
-    "msd_bb = msd_bb.drop_duplicates(['artist_clean', 'title_clean'])\n",
-    "display(msd_bb['msd_id'].nunique(), msd_mbid['msd_id'].nunique())"
+    "display(msd_bb_cleaned[~msd_bb_cleaned.msd_id.isin(msd_bb_exact['msd_id'])][['artist_msd', 'artist_bb', 'artist_clean', 'title_msd', 'title_bb', 'title_clean']])"
    ]
   },
   {
@@ -114,42 +82,68 @@
    "source": [
     "ab_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_ab_hl_features.parquet')[['mbid']]\n",
     "ab_hl_features = ab_hl_features.merge(msd_bb_mbid_non_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
-    "msd_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_msd_hl_features.parquet')[['msd_id']]\n",
+    "essentia_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_essentia_hl_features.parquet')[['msd_id']]\n",
     "\n",
     "\n",
     "ab_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_ab_ll_features.parquet')[['mbid']]\n",
     "ab_ll_features = ab_ll_features.merge(msd_bb_mbid_non_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
-    "msd_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_msd_ll_features.parquet')[['msd_id']]\n",
+    "essentia_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_essentia_ll_features.parquet')[['msd_id']]\n",
     "\n",
-    "hl_features = ab_hl_features.merge(msd_hl_features, on=['msd_id'])\n",
-    "ll_features = ab_ll_features.merge(msd_ll_features, on=['msd_id'])\n",
+    "hl_features = ab_hl_features.merge(essentia_hl_features, on=['msd_id'])\n",
+    "ll_features = ab_ll_features.merge(essentia_ll_features, on=['msd_id'])\n",
     "\n",
     "all_features = ll_features.merge(hl_features, on=['msd_id'])\n",
+    "all_ab_features = ab_hl_features.merge(ab_ll_features, on=['msd_id', 'mbid'])\n",
+    "all_essentia_features = essentia_hl_features.merge(essentia_ll_features, on=['msd_id'])\n",
+    "\n",
     "\n",
     "counts = pd.DataFrame({\n",
-    "    'ab_hl': {\n",
-    "        'msd_id_count': ab_hl_features['msd_id'].nunique(),\n",
-    "    },\n",
-    "    'ab_ll': {\n",
-    "        'msd_id_count': ab_ll_features['msd_id'].nunique(),\n",
-    "    },\n",
-    "    'msd_hl': {\n",
-    "        'msd_id_count': msd_hl_features['msd_id'].nunique(),\n",
-    "    },\n",
-    "    'msd_ll': {\n",
-    "        'msd_id_count': msd_ll_features['msd_id'].nunique(),\n",
+    "   'ab_hl': {\n",
+    "       'msd_id_count': ab_hl_features['msd_id'].nunique(),\n",
+    "       'mbid_count': ab_hl_features['mbid'].nunique(),\n",
+    "   },\n",
+    "    'essentia_hl': {\n",
+    "        'msd_id_count': essentia_hl_features['msd_id'].nunique(),\n",
     "    },\n",
     "    'hl': {\n",
     "        'msd_id_count': hl_features['msd_id'].nunique(),\n",
+    "        'mbid_count': hl_features['mbid'].nunique(),\n",
+    "    },\n",
+    "    'ab_ll': {\n",
+    "        'msd_id_count': ab_ll_features['msd_id'].nunique(),\n",
+    "        'mbid_count': ab_ll_features['mbid'].nunique(),\n",
+    "    },\n",
+    "    'essentia_ll': {\n",
+    "        'msd_id_count': essentia_ll_features['msd_id'].nunique(),\n",
     "    },\n",
     "    'll': {\n",
     "        'msd_id_count': ll_features['msd_id'].nunique(),\n",
+    "        'mbid_count': ll_features['mbid'].nunique(),\n",
     "    },\n",
     "    'all': {\n",
     "        'msd_id_count': all_features['msd_id'].nunique(),\n",
     "    },\n",
+    "    'all_ab': {\n",
+    "        'msd_id_count': all_ab_features['msd_id'].nunique(),\n",
+    "        'mbid_count': all_ab_features['mbid'].nunique(),\n",
+    "    },\n",
+    "    'all_essentia': {\n",
+    "        'msd_id_count': all_essentia_features['msd_id'].nunique(),\n",
+    "    },\n",
     "})\n",
-    "display(counts)"
+    "display(counts)\n",
+    "\n",
+    "del ab_hl_features\n",
+    "del essentia_hl_features\n",
+    "del ab_ll_features\n",
+    "del essentia_ll_features\n",
+    "\n",
+    "del hl_features\n",
+    "del ll_features\n",
+    "\n",
+    "del all_features\n",
+    "del all_ab_features\n",
+    "del all_essentia_features"
    ]
   },
   {
@@ -165,46 +159,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ab_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_matches_ab_hl_features.parquet')[['mbid']]\n",
-    "ab_hl_features = ab_hl_features.merge(msd_bb_mbid_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
-    "msd_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_matches_msd_hl_features.parquet')[['msd_id']]\n",
+    "ab_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_ab_hl_features.parquet')[['mbid']]\n",
+    "ab_hl_features = ab_hl_features.merge(msd_bb_mbid_cleaned_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
+    "essentia_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_essentia_hl_features.parquet')[['msd_id']]\n",
     "\n",
     "\n",
-    "ab_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_matches_ab_ll_features.parquet')[['mbid']]\n",
-    "ab_ll_features = ab_ll_features.merge(msd_bb_mbid_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
-    "msd_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_matches_msd_ll_features.parquet')[['msd_id']]\n",
+    "ab_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_ab_ll_features.parquet')[['mbid']]\n",
+    "ab_ll_features = ab_ll_features.merge(msd_bb_mbid_cleaned_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
+    "essentia_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_essentia_ll_features.parquet')[['msd_id']]\n",
     "\n",
-    "hl_features = ab_hl_features.merge(msd_hl_features, on=['msd_id'])\n",
-    "ll_features = ab_ll_features.merge(msd_ll_features, on=['msd_id'])\n",
-    "mel_features = pd.read_pickle('../data/hit_song_prediction_ismir2020/interim/msd_bb_matches.pickle')[['msd_id']]\n",
+    "hl_features = ab_hl_features.merge(essentia_hl_features, on=['msd_id'])\n",
+    "ll_features = ab_ll_features.merge(essentia_ll_features, on=['msd_id'])\n",
     "\n",
     "all_features = ll_features.merge(hl_features, on=['msd_id'])\n",
-    "all_features = all_features.merge(mel_features, on=['msd_id'])\n",
+    "all_ab_features = ab_hl_features.merge(ab_ll_features, on=['msd_id', 'mbid'])\n",
+    "all_essentia_features = essentia_hl_features.merge(essentia_ll_features, on=['msd_id'])\n",
     "\n",
     "counts = pd.DataFrame({\n",
-    "    'ab_hl': {\n",
-    "        'msd_id_count': ab_hl_features['msd_id'].nunique(),\n",
-    "    },\n",
-    "    'ab_ll': {\n",
-    "        'msd_id_count': ab_ll_features['msd_id'].nunique(),\n",
-    "    },\n",
-    "    'msd_hl': {\n",
-    "        'msd_id_count': msd_hl_features['msd_id'].nunique(),\n",
-    "    },\n",
-    "    'msd_ll': {\n",
-    "        'msd_id_count': msd_ll_features['msd_id'].nunique(),\n",
+    "   'ab_hl': {\n",
+    "       'msd_id_count': ab_hl_features['msd_id'].nunique(),\n",
+    "       'mbid_count': ab_hl_features['mbid'].nunique(),\n",
+    "   },\n",
+    "    'essentia_hl': {\n",
+    "        'msd_id_count': essentia_hl_features['msd_id'].nunique(),\n",
     "    },\n",
     "    'hl': {\n",
     "        'msd_id_count': hl_features['msd_id'].nunique(),\n",
+    "        'mbid_count': hl_features['mbid'].nunique(),\n",
+    "    },\n",
+    "    'ab_ll': {\n",
+    "        'msd_id_count': ab_ll_features['msd_id'].nunique(),\n",
+    "        'mbid_count': ab_ll_features['mbid'].nunique(),\n",
+    "    },\n",
+    "    'essentia_ll': {\n",
+    "        'msd_id_count': essentia_ll_features['msd_id'].nunique(),\n",
     "    },\n",
     "    'll': {\n",
     "        'msd_id_count': ll_features['msd_id'].nunique(),\n",
-    "    },\n",
-    "    'mel': {\n",
-    "        'msd_id_count': mel_features['msd_id'].nunique(),\n",
+    "        'mbid_count': ll_features['mbid'].nunique(),\n",
     "    },\n",
     "    'all': {\n",
     "        'msd_id_count': all_features['msd_id'].nunique(),\n",
+    "    },\n",
+    "    'all_ab': {\n",
+    "        'msd_id_count': all_ab_features['msd_id'].nunique(),\n",
+    "        'mbid_count': all_ab_features['mbid'].nunique(),\n",
+    "    },\n",
+    "    'all_essentia': {\n",
+    "        'msd_id_count': all_essentia_features['msd_id'].nunique(),\n",
+    "    },\n",
+    "})\n",
+    "display(counts)\n",
+    "\n",
+    "del ab_hl_features\n",
+    "del essentia_hl_features\n",
+    "del ab_ll_features\n",
+    "del essentia_ll_features\n",
+    "\n",
+    "del hl_features\n",
+    "del ll_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features_ddup = all_features.merge(msd_bb_cleaned[['msd_id', 'artist_clean', 'title_clean']], on=['msd_id']).drop_duplicates(['artist_clean', 'title_clean'])['msd_id'].nunique()\n",
+    "del all_features\n",
+    "all_ab_features_ddup = all_ab_features.merge(msd_bb_cleaned[['msd_id', 'artist_clean', 'title_clean']], on=['msd_id']).drop_duplicates(['artist_clean', 'title_clean'])['msd_id'].nunique()\n",
+    "del all_ab_features\n",
+    "all_essentia_features_ddup = all_essentia_features.merge(msd_bb_cleaned[['msd_id', 'artist_clean', 'title_clean']], on=['msd_id']).drop_duplicates(['artist_clean', 'title_clean'])['msd_id'].nunique()\n",
+    "del all_essentia_features\n",
+    "\n",
+    "counts = pd.DataFrame({\n",
+    "    'all_ddup': {\n",
+    "        'msd_id_count': all_features_ddup,\n",
+    "    },\n",
+    "    'all_ab_ddup': {\n",
+    "        'msd_id_count': all_ab_features_ddup,\n",
+    "    },\n",
+    "    'all_essentia_ddup': {\n",
+    "        'msd_id_count': all_essentia_features_ddup,\n",
     "    },\n",
     "})\n",
     "display(counts)"
@@ -218,8 +255,8 @@
    "source": [
     "feature = 'highlevel.gender.all.female'\n",
     "\n",
-    "ab_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_matches_ab_hl_features.parquet')\n",
-    "data = ab_hl_features.merge(msd_bb_mbid_matches, on=['mbid'])\n",
+    "ab_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_ab_hl_features.parquet')\n",
+    "data = ab_hl_features.merge(msd_bb_mbid_cleaned_matches, on=['mbid'])\n",
     "\n",
     "dup = data[data.duplicated(['msd_id'], keep=False)]\n",
     "\n",
