--- a/notebooks/msd_bb_mbid_stats.ipynb
+++ b/notebooks/msd_bb_mbid_stats.ipynb
@@ -33,28 +33,37 @@
     "    'msd_bb_ismir2019': {\n",
     "        'msd_id_count': msd_bb_ismir2019['msd_id'].nunique(),\n",
     "        'mbid_count': msd_bb_ismir2019['mbid'].nunique(),\n",
+    "        'song_count': len(msd_bb_ismir2019.drop_duplicates(subset=['artist_x', 'title_x'])),\n",
     "    },\n",
     "    'msd_bb_exact': {\n",
-    "        'msd_id_count': msd_bb_exact['msd_id'].nunique(),  \n",
+    "        'msd_id_count': msd_bb_exact['msd_id'].nunique(),\n",
+    "        'song_count': len(msd_bb_exact.drop_duplicates(subset=['artist', 'title'])),\n",
     "    },\n",
     "    'msd_bb_mbid_exact': {\n",
     "        'msd_id_count': msd_bb_mbid_exact_matches['msd_id'].nunique(),\n",
     "        'mbid_count': msd_bb_mbid_exact_matches['mbid'].nunique(),\n",
+    "        'song_count': len(msd_bb_mbid_exact_matches.drop_duplicates(subset=['artist_msd_bb', 'title_msd_bb'])),\n",
     "    },\n",
     "    'msd_bb_cleaned': {\n",
-    "        'msd_id_count': msd_bb_cleaned['msd_id'].nunique(),  \n",
+    "        'msd_id_count': msd_bb_cleaned['msd_id'].nunique(),\n",
+    "        'song_count': len(msd_bb_cleaned.drop_duplicates(subset=['artist_clean', 'title_clean'])),\n",
     "    },\n",
     "    'msd_bb_mbid_cleaned': {\n",
     "        'msd_id_count': msd_bb_mbid_cleaned_matches['msd_id'].nunique(),\n",
     "        'mbid_count': msd_bb_mbid_cleaned_matches['mbid'].nunique(),\n",
+    "        'song_count': len(msd_bb_cleaned.drop_duplicates(subset=['artist_clean', 'title_clean'])),\n",
     "    },\n",
     "    'msd_bb_mbid_non': {\n",
     "        'msd_id_count': msd_bb_mbid_non_matches['msd_id'].nunique(),\n",
     "        'mbid_count': msd_bb_mbid_non_matches['mbid'].nunique(),\n",
+    "        'song_count': len(msd_bb_mbid_non_matches.drop_duplicates(subset=['artist_msd_bb', 'title_msd_bb'])),\n",
     "    },\n",
     "}).T\n",
     "\n",
-    "counts['ratio'] = counts['mbid_count'] / counts['msd_id_count']\n",
+    "counts['mbid_msd_ratio'] = counts['mbid_count'] / counts['msd_id_count']\n",
+    "counts['mbid_song_ratio'] = counts['mbid_count'] / counts['song_count']\n",
+    "counts['msd_song_ratio'] = counts['msd_id_count'] / counts['song_count']\n",
+    "\n",
     "display(counts)"
    ]
   },
@@ -81,13 +90,14 @@
    "outputs": [],
    "source": [
     "ab_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_ab_hl_features.parquet')[['mbid']]\n",
-    "ab_hl_features = ab_hl_features.merge(msd_bb_mbid_non_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
+    "ab_hl_features = ab_hl_features.merge(msd_bb_mbid_non_matches, on=['mbid'])[['artist_msd_bb', 'title_msd_bb', 'msd_id', 'mbid']]\n",
     "essentia_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_essentia_hl_features.parquet')[['msd_id']]\n",
-    "\n",
+    "essentia_hl_features = essentia_hl_features.merge(msd_bb_mbid_non_matches[['artist_msd_bb', 'title_msd_bb', 'msd_id']].drop_duplicates(subset=['msd_id']), on=['msd_id'])\n",
     "\n",
     "ab_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_ab_ll_features.parquet')[['mbid']]\n",
-    "ab_ll_features = ab_ll_features.merge(msd_bb_mbid_non_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
+    "ab_ll_features = ab_ll_features.merge(msd_bb_mbid_non_matches, on=['mbid'])[['artist_msd_bb', 'title_msd_bb', 'msd_id', 'mbid']]\n",
     "essentia_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches_essentia_ll_features.parquet')[['msd_id']]\n",
+    "essentia_ll_features = essentia_ll_features.merge(msd_bb_mbid_non_matches[['artist_msd_bb', 'title_msd_bb', 'msd_id']].drop_duplicates(subset=['msd_id']), on=['msd_id'])\n",
     "\n",
     "hl_features = ab_hl_features.merge(essentia_hl_features, on=['msd_id'])\n",
     "ll_features = ab_ll_features.merge(essentia_ll_features, on=['msd_id'])\n",
@@ -101,34 +111,43 @@
     "   'ab_hl': {\n",
     "       'msd_id_count': ab_hl_features['msd_id'].nunique(),\n",
     "       'mbid_count': ab_hl_features['mbid'].nunique(),\n",
+    "       'song_count': len(ab_hl_features.drop_duplicates(subset=['artist_msd_bb', 'title_msd_bb'])),\n",
     "   },\n",
     "    'essentia_hl': {\n",
     "        'msd_id_count': essentia_hl_features['msd_id'].nunique(),\n",
+    "        'song_count': len(essentia_hl_features.drop_duplicates(subset=['artist_msd_bb', 'title_msd_bb'])),\n",
     "    },\n",
     "    'hl': {\n",
     "        'msd_id_count': hl_features['msd_id'].nunique(),\n",
     "        'mbid_count': hl_features['mbid'].nunique(),\n",
+    "        'song_count': len(hl_features.drop_duplicates(subset=['artist_msd_bb_x', 'title_msd_bb_x'])),\n",
     "    },\n",
     "    'ab_ll': {\n",
     "        'msd_id_count': ab_ll_features['msd_id'].nunique(),\n",
     "        'mbid_count': ab_ll_features['mbid'].nunique(),\n",
+    "        'song_count': len(ab_ll_features.drop_duplicates(subset=['artist_msd_bb', 'title_msd_bb'])),\n",
     "    },\n",
     "    'essentia_ll': {\n",
     "        'msd_id_count': essentia_ll_features['msd_id'].nunique(),\n",
+    "        'song_count': len(essentia_ll_features.drop_duplicates(subset=['artist_msd_bb', 'title_msd_bb'])),\n",
     "    },\n",
     "    'll': {\n",
     "        'msd_id_count': ll_features['msd_id'].nunique(),\n",
     "        'mbid_count': ll_features['mbid'].nunique(),\n",
+    "        'song_count': len(ll_features.drop_duplicates(subset=['artist_msd_bb_x', 'title_msd_bb_x'])),\n",
     "    },\n",
     "    'all': {\n",
     "        'msd_id_count': all_features['msd_id'].nunique(),\n",
+    "        'song_count': len(all_features.drop_duplicates(subset=['artist_msd_bb_x_x', 'title_msd_bb_x_x'])),\n",
     "    },\n",
     "    'all_ab': {\n",
     "        'msd_id_count': all_ab_features['msd_id'].nunique(),\n",
     "        'mbid_count': all_ab_features['mbid'].nunique(),\n",
+    "        'song_count': len(all_ab_features.drop_duplicates(subset=['artist_msd_bb_x', 'title_msd_bb_x'])),\n",
     "    },\n",
     "    'all_essentia': {\n",
     "        'msd_id_count': all_essentia_features['msd_id'].nunique(),\n",
+    "        'song_count': len(all_essentia_features.drop_duplicates(subset=['artist_msd_bb_x', 'title_msd_bb_x'])),\n",
     "    },\n",
     "})\n",
     "display(counts)\n",
@@ -160,13 +179,15 @@
    "outputs": [],
    "source": [
     "ab_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_ab_hl_features.parquet')[['mbid']]\n",
-    "ab_hl_features = ab_hl_features.merge(msd_bb_mbid_cleaned_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
+    "ab_hl_features = ab_hl_features.merge(msd_bb_mbid_cleaned_matches, on=['mbid'])[['artist_clean', 'title_clean', 'msd_id', 'mbid']]\n",
     "essentia_hl_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_essentia_hl_features.parquet')[['msd_id']]\n",
+    "essentia_hl_features = essentia_hl_features.merge(msd_bb_mbid_cleaned_matches[['artist_clean', 'title_clean', 'msd_id']].drop_duplicates(subset=['msd_id']), on=['msd_id'])\n",
     "\n",
     "\n",
     "ab_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_ab_ll_features.parquet')[['mbid']]\n",
-    "ab_ll_features = ab_ll_features.merge(msd_bb_mbid_cleaned_matches, on=['mbid'])[['msd_id', 'mbid']]\n",
+    "ab_ll_features = ab_ll_features.merge(msd_bb_mbid_cleaned_matches, on=['mbid'])[['artist_clean', 'title_clean', 'msd_id', 'mbid']]\n",
     "essentia_ll_features = pd.read_parquet('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches_essentia_ll_features.parquet')[['msd_id']]\n",
+    "essentia_ll_features = essentia_ll_features.merge(msd_bb_mbid_cleaned_matches[['artist_clean', 'title_clean', 'msd_id']].drop_duplicates(subset=['msd_id']), on=['msd_id'])\n",
     "\n",
     "hl_features = ab_hl_features.merge(essentia_hl_features, on=['msd_id'])\n",
     "ll_features = ab_ll_features.merge(essentia_ll_features, on=['msd_id'])\n",
@@ -179,34 +200,43 @@
     "   'ab_hl': {\n",
     "       'msd_id_count': ab_hl_features['msd_id'].nunique(),\n",
     "       'mbid_count': ab_hl_features['mbid'].nunique(),\n",
+    "       'song_count': len(ab_hl_features.drop_duplicates(subset=['artist_clean', 'title_clean'])),\n",
     "   },\n",
     "    'essentia_hl': {\n",
     "        'msd_id_count': essentia_hl_features['msd_id'].nunique(),\n",
+    "        'song_count': len(essentia_hl_features.drop_duplicates(subset=['artist_clean', 'title_clean'])),\n",
     "    },\n",
     "    'hl': {\n",
     "        'msd_id_count': hl_features['msd_id'].nunique(),\n",
     "        'mbid_count': hl_features['mbid'].nunique(),\n",
+    "        'song_count': len(hl_features.drop_duplicates(subset=['artist_clean_x', 'title_clean_x'])),\n",
     "    },\n",
     "    'ab_ll': {\n",
     "        'msd_id_count': ab_ll_features['msd_id'].nunique(),\n",
     "        'mbid_count': ab_ll_features['mbid'].nunique(),\n",
+    "        'song_count': len(ab_ll_features.drop_duplicates(subset=['artist_clean', 'title_clean'])),\n",
     "    },\n",
     "    'essentia_ll': {\n",
     "        'msd_id_count': essentia_ll_features['msd_id'].nunique(),\n",
+    "        'song_count': len(essentia_ll_features.drop_duplicates(subset=['artist_clean', 'title_clean'])),\n",
     "    },\n",
     "    'll': {\n",
     "        'msd_id_count': ll_features['msd_id'].nunique(),\n",
     "        'mbid_count': ll_features['mbid'].nunique(),\n",
+    "        'song_count': len(ll_features.drop_duplicates(subset=['artist_clean_x', 'title_clean_x'])),\n",
     "    },\n",
     "    'all': {\n",
     "        'msd_id_count': all_features['msd_id'].nunique(),\n",
+    "        'song_count': len(all_features.drop_duplicates(subset=['artist_clean_x_x', 'title_clean_x_x'])),\n",
     "    },\n",
     "    'all_ab': {\n",
     "        'msd_id_count': all_ab_features['msd_id'].nunique(),\n",
     "        'mbid_count': all_ab_features['mbid'].nunique(),\n",
+    "        'song_count': len(all_ab_features.drop_duplicates(subset=['artist_clean_x', 'title_clean_x'])),\n",
     "    },\n",
     "    'all_essentia': {\n",
     "        'msd_id_count': all_essentia_features['msd_id'].nunique(),\n",
+    "        'song_count': len(all_essentia_features.drop_duplicates(subset=['artist_clean_x', 'title_clean_x'])),\n",
     "    },\n",
     "})\n",
     "display(counts)\n",
@@ -218,33 +248,6 @@
     "\n",
     "del hl_features\n",
     "del ll_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_features_ddup = all_features.merge(msd_bb_cleaned[['msd_id', 'artist_clean', 'title_clean']], on=['msd_id']).drop_duplicates(['artist_clean', 'title_clean'])['msd_id'].nunique()\n",
-    "del all_features\n",
-    "all_ab_features_ddup = all_ab_features.merge(msd_bb_cleaned[['msd_id', 'artist_clean', 'title_clean']], on=['msd_id']).drop_duplicates(['artist_clean', 'title_clean'])['msd_id'].nunique()\n",
-    "del all_ab_features\n",
-    "all_essentia_features_ddup = all_essentia_features.merge(msd_bb_cleaned[['msd_id', 'artist_clean', 'title_clean']], on=['msd_id']).drop_duplicates(['artist_clean', 'title_clean'])['msd_id'].nunique()\n",
-    "del all_essentia_features\n",
-    "\n",
-    "counts = pd.DataFrame({\n",
-    "    'all_ddup': {\n",
-    "        'msd_id_count': all_features_ddup,\n",
-    "    },\n",
-    "    'all_ab_ddup': {\n",
-    "        'msd_id_count': all_ab_features_ddup,\n",
-    "    },\n",
-    "    'all_essentia_ddup': {\n",
-    "        'msd_id_count': all_essentia_features_ddup,\n",
-    "    },\n",
-    "})\n",
-    "display(counts)"
    ]
   },
   {
