--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -22,7 +22,10 @@
     "ab_cleaned = pd.read_parquet('../data/hit_song_prediction_ismir2020/processed/msd_bb_mbid_cleaned_matches_ab_unique.parquet')\n",
     "ess_cleaned = pd.read_parquet('../data/hit_song_prediction_ismir2020/processed/msd_bb_mbid_cleaned_matches_essentia_unique.parquet')\n",
     "numeric_cols = matcher.get_numeric_columns(ab_cleaned)\n",
-    "features = set(common.get_columns_matching_list(numeric_cols, common.all_list()))"
+    "features = set(common.get_columns_matching_list(numeric_cols, common.hl_no_year_list()))\n",
+    "\n",
+    "ab_cleaned['peakPos'] = ab_cleaned['peakPos'].fillna(150)\n",
+    "ess_cleaned['peakPos'] = ess_cleaned['peakPos'].fillna(150)"
    ]
   },
   {
@@ -33,8 +36,10 @@
    "source": [
     "from sklearn import manifold\n",
     "\n",
+    "x = ab_cleaned\n",
+    "\n",
     "dim_red = manifold.TSNE(n_components=2, init='pca', random_state=0)\n",
-    "data = pd.DataFrame(dim_red.fit_transform(ab_cleaned[features]))"
+    "data = pd.DataFrame(dim_red.fit_transform(x[features]))"
    ]
   },
   {
@@ -43,10 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['peakPos'] = ab_cleaned['peakPos']\n",
-    "data['hit'] = (data['peakPos'] < 50).apply(lambda v: 'red' if v else 'gray')\n",
+    "data['peakPos'] = x['peakPos']\n",
+    "data['hit'] = (data['peakPos'] <= 100).apply(lambda v: 'red' if v else 'gray')\n",
     "display(data.plot.scatter(x=0, y=1, c='peakPos', colormap='Spectral', title='TSNE peak pos', figsize=(15,10)))\n",
-    "display(data.plot.scatter(x=0, y=1, c='hit', colormap='Spectral', title='TSNE peak pos', figsize=(15,10)))"
+    "display(data.plot.scatter(x=0, y=1, c='hit', colormap='Spectral', title='TSNE hits', figsize=(15,10)))"
    ]
   }
  ],
