--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
-    "display(best_results[['approach', 'mae', 'rmse', 'hit_nonhit_accuracy']])\n",
+    "display(best_results[['date', 'approach', 'mae', 'rmse', 'hit_nonhit_accuracy']])\n",
     "# best_results[['sourcefile', ]].plot().bar()"
    ]
   }
