--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -30,10 +30,11 @@
     "best_results['rmse'] = best_results['neg_mean_squared_error'].pow(1./2)\n",
     "best_results = best_results.sort_values(by=['approach'])\n",
     "\n",
+    "display(best_results[['date', 'approach', 'mae', 'rmse', 'hit_nonhit_accuracy']])\n",
+    "\n",
     "display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
-    "display(best_results[['date', 'approach', 'mae', 'rmse', 'hit_nonhit_accuracy']])\n",
-    "# best_results[['sourcefile', ]].plot().bar()"
+    "display(best_results[['approach', 'hit_nonhit_accuracy']].plot.bar(x='approach', y='hit_nonhit_accuracy', title='Wide and Deep Hit/Non-Hit Accuracy', figsize=(12, 6)))"
    ]
   }
  ],
