--- a/notebooks/msd_mbid_lastfm.ipynb
+++ b/notebooks/msd_mbid_lastfm.ipynb
@@ -15,8 +15,7 @@
     "\n",
     "msd_mbid_lastfm = pd.read_pickle('../data/hit_song_prediction_ismir2020/interim/msd_mbid_lastfm.pickle')\n",
     "\n",
-    "msd_mbid_map = msd_mbid_map.merge(msd_mbid_lastfm, left_on=['mbid'], right_on=['msd_mbid'])\n",
-    "del msd_mbid_map['msd_mbid']\n",
+    "msd_mbid_map = msd_mbid_map.merge(msd_mbid_lastfm, on=['mbid'])\n",
     "msd_mbid_map.drop_duplicates(['lastfm_mbid'], inplace=True)\n",
     "\n",
     "display(msd_mbid_map[['lastfm_listener_count']].plot.hist())"
